crates/monosecret/tests/snapshots/op_request_budget__fallback_request_log.snap
---
source: crates/monosecret/tests/op_request_budget.rs
expression: "calls.join(\"\\n\")"
---
vault list --format json
item get --vault Development --format json
item get Dotfiles --vault Development --format json
inject
